--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,12 +8,21 @@
         <welcome-file>Home</welcome-file>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-    <filter>
-        <filter-name>encoding</filter-name>
-        <filter-class>vn.edu.nlu.servletad.FilterEncoding</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>encoding</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+
+<!--    <filter>-->
+<!--        <filter-name>encoding</filter-name>-->
+<!--        <filter-class>vn.edu.nlu.filter.FilterEncoding</filter-class>-->
+<!--    </filter>-->
+<!--    <filter-mapping>-->
+<!--        <filter-name>encoding</filter-name>-->
+<!--        <url-pattern>/*</url-pattern>-->
+<!--    </filter-mapping>-->
+<!--    <filter>-->
+<!--        <filter-name>comfirmLoginAdmin</filter-name>-->
+<!--        <filter-class>vn.edu.nlu.filter.FilterUrlAdmin</filter-class>-->
+<!--    </filter>-->
+<!--    <filter-mapping>-->
+<!--        <filter-name>comfirmLoginAdmin</filter-name>-->
+<!--        <url-pattern>/Admin/*</url-pattern>-->
+<!--    </filter-mapping>-->
 </web-app>
