--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,53 @@
         <welcome-file>Home</welcome-file>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+<!--    <context-param>-->
+<!--        <param-name>host</param-name>-->
+<!--        <param-value>your_stmp_server</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>port</param-name>-->
+<!--        <param-value>25</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>email</param-name>-->
+<!--        <param-value>your sender email</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>name</param-name>-->
+<!--        <param-value>your sender name</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>pass</param-name>-->
+<!--        <param-value>your sender email password</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>host</param-name>-->
+<!--        <param-value>smtp.gmail.com</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>port</param-name>-->
+<!--        <param-value>587</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>email</param-name>-->
+<!--        <param-value>YOUR_EMAIL</param-value>-->
+<!--    </context-param>-->
+<!--    <context-param>-->
+<!--        <param-name>name</param-name>-->
+<!--        <param-value>YOUR_NAME</param-value>-->
+<!--    </context-param>-->
+<!--    <context-param>-->
+<!--        <param-name>pass</param-name>-->
+<!--        <param-value>YOUR_PASSWORD</param-value>-->
+<!--    </context-param>-->
 
 <!--    <filter>-->
 <!--        <filter-name>encoding</filter-name>-->
