--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -71,4 +71,13 @@
 <!--        <filter-name>comfirmLoginAdmin</filter-name>-->
 <!--        <url-pattern>/Admin/*</url-pattern>-->
 <!--    </filter-mapping>-->
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>securedapp</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <user-data-constraint>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
 </web-app>
